--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <body>
     <!-- Шапка сторінки -->
-    <header class="page-header">
+    <!-- <header class="page-header">
       <div class="common-container container">
         <nav class="page-navigation">
           <a class="page-logo link" href="./index.html">
@@ -53,18 +53,18 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
 
     <!-- Унікальний контент сторінки -->
     <main>
       <!-- Перша секція. Головна інформація -->
 
-      <section class="main-information">
+      <!-- <section class="main-information">
         <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button class="modal-open-button" type="button" data-modal-open>Order Service</button>
         </div>
-      </section>
+      </section> -->
 
       <!-- Друга секція. Основні принципи -->
 
@@ -426,7 +426,7 @@
 
       <!-- П'ята секція. Клієнти -->
 
-      <section class="our-customers">
+       <section class="our-customers">
         <div class="container">
           <h2 class="section-description">Customers</h2>
           <ul class="icons-customers list">
@@ -509,7 +509,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> 
     </main>
 
     <!-- Підвал сторінки -->
@@ -583,9 +583,9 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> 
 
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
@@ -684,8 +684,15 @@
           <button type="submit" class="contact-form-submit">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
 
     <script src="./js/modal.js"></script>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
