--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <body>
     <!-- Шапка сторінки -->
-    <!-- <header class="page-header">
+     <header class="page-header">
       <div class="common-container container">
         <nav class="page-navigation">
           <a class="page-logo link" href="./index.html">
@@ -53,18 +53,18 @@
           </ul>
         </address>
       </div>
-    </header> -->
+    </header>
 
     <!-- Унікальний контент сторінки -->
     <main>
       <!-- Перша секція. Головна інформація -->
 
-      <!-- <section class="main-information">
+      <section class="main-information">
         <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
           <button class="modal-open-button" type="button" data-modal-open>Order Service</button>
         </div>
-      </section> -->
+      </section>
 
       <!-- Друга секція. Основні принципи -->
 
@@ -144,7 +144,7 @@
           <h2 class="section-description">What are we doing</h2>
           <ul class="summary list">
             <li class="our-work-images">
-              <img
+              <img srcset="./images/what-are-we-doing/pc-screen.jpg 1x, ./images/what-are-we-doing/pc-screen-2x.jpg 2x"
                 src="./images/what-are-we-doing/pc-screen.jpg"
                 alt="photo-screen"
                 width="360"
@@ -153,7 +153,7 @@
             </li>
 
             <li class="our-work-images">
-              <img
+              <img srcset="./images/what-are-we-doing/tel-screen.jpg 1x, ./images/what-are-we-doing/tel-screen-2x.jpg 2x"
                 src="./images/what-are-we-doing/tel-screen.jpg"
                 alt="photo-tel-screen"
                 width="360"
@@ -162,7 +162,7 @@
             </li>
 
             <li class="our-work-images">
-              <img
+              <img srcset="./images/what-are-we-doing/tel.jpg 1x, ./images/what-are-we-doing/tel-2x.jpg 2x"
                 src="./images/what-are-we-doing/tel.jpg"
                 alt="photo-tel"
                 width="360"
@@ -176,11 +176,17 @@
       <!-- Четверта секція. Працівники -->
 
       <section class="our-team-description">
-        <div class="container">
+        <div class="container team-container">
           <h2 class="section-description">Our Team</h2>
           <ul class="our-team-description-list list">
             <li class="our-team-identification">
-              <img src="./images/our-team/img-mark.jpg" alt="photo-mark" width="264" height="260" />
+              <img
+                srcset="./images/our-team/img-mark.jpg 1x, ./images/our-team/img-mark-2x.jpg 2x"
+                src="./images/our-team/img-mark.jpg"
+                alt="photo-mark"
+                width="264"
+                height="260"
+              />
               <div class="person-information">
                 <h3 class="name">Mark Guerrero</h3>
                 <p class="position">Product Designer</p>
@@ -238,7 +244,8 @@
             </li>
 
             <li class="our-team-identification">
-              <img src="./images/our-team/img-tom.jpg" alt="photo-tom" width="264" height="260" />
+              <img  srcset="./images/our-team/img-tom.jpg 1x, ./images/our-team/img-tom-2x.jpg 2x"
+              src="./images/our-team/img-tom.jpg" alt="photo-tom" width="264" height="260" />
               <div class="person-information">
                 <h3 class="name">Tom Ford</h3>
                 <p class="position">Frontend Developer</p>
@@ -296,7 +303,7 @@
             </li>
 
             <li class="our-team-identification">
-              <img
+              <img  srcset="./images/our-team/img-camila.jpg 1x, ./images/our-team/img-camila-2x.jpg 2x"
                 src="./images/our-team/img-camila.jpg"
                 alt="photo-camila"
                 width="264"
@@ -359,7 +366,7 @@
             </li>
 
             <li class="our-team-identification">
-              <img
+              <img srcset="./images/our-team/img-daniel.jpg 1x, ./images/our-team/img-daniel-2x.jpg 2x"
                 src="./images/our-team/img-daniel.jpg"
                 alt="photo-daniel"
                 width="264"
@@ -426,7 +433,7 @@
 
       <!-- П'ята секція. Клієнти -->
 
-       <section class="our-customers">
+      <section class="our-customers">
         <div class="container">
           <h2 class="section-description">Customers</h2>
           <ul class="icons-customers list">
@@ -509,7 +516,7 @@
             </li>
           </ul>
         </div>
-      </section> 
+      </section>
     </main>
 
     <!-- Підвал сторінки -->
@@ -583,9 +590,9 @@
           </form>
         </div>
       </div>
-    </footer> 
+    </footer>
 
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
@@ -684,7 +691,7 @@
           <button type="submit" class="contact-form-submit">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
 
     <script src="./js/modal.js"></script>
     <script
