--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <!-- Шапка сторінки -->
     <header class="page-header">
-      <div class="common-container container">
+      <div class="common-container container desktop-container">
         <nav class="page-navigation">
           <a class="page-logo link" href="./index.html">
             Web <span class="description-first-word-page-logo">Studio</span></a
