--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a class="page-logo link" href="./index.html">
             Web <span class="description-first-word-page-logo">Studio</span></a
           >
-          <button type="button" class="open-mob-menu-button" data-menu-open>
+          <button type="button" class="open-mob-menu-button" js-open-menu>
             <div class="menu-icon">
               <svg class="menu-icon-view" aria-label="іконка меню" width="32" height="22">
                 <use href="./images/icons.svg#icon-menu"></use>
@@ -61,8 +61,8 @@
         </address>
       </div>
 
-      <div class="mob-menu is-hidden" data-menu>
-        <button type="button" class="close-mob-menu-button" data-menu-close>
+      <div class="mob-menu" js-menu-container>
+        <button type="button" class="close-mob-menu-button" js-close-menu>
           <svg class="modal-close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
