--- a/index.html
+++ b/index.html
@@ -26,15 +26,7 @@
           <a class="page-logo link" href="./index.html">
             Web <span class="description-first-word-page-logo">Studio</span></a
           >
-          <button type="button" class="open-mob-menu-button" js-open-menu>
-            <div class="menu-icon">
-              <svg class="menu-icon-view" aria-label="іконка меню" width="32" height="22">
-                <use href="./images/icons.svg#icon-menu"></use>
-              </svg>
-            </div>
-          </button>
-
-          <ul class="menu list">
+                    <ul class="menu list">
             <li class="menu-item">
               <a class="menu-link link first-line" href="./index.html">Studio</a>
             </li>
@@ -46,6 +38,14 @@
             </li>
           </ul>
         </nav>
+        
+        <button type="button" class="open-mob-menu-button js-open-menu">
+          <div class="menu-icon">
+            <svg class="menu-icon-view" aria-label="іконка меню" width="32" height="22">
+              <use href="./images/icons.svg#icon-menu"></use>
+            </svg>
+          </div>
+        </button>
 
         <address class="contact-information">
           <ul class="contacts list">
@@ -61,8 +61,8 @@
         </address>
       </div>
 
-      <div class="mob-menu" js-menu-container>
-        <button type="button" class="close-mob-menu-button" js-close-menu>
+          <div class="mob-menu js-menu-container">
+        <button type="button" class="close-mob-menu-button js-close-menu">
           <svg class="modal-close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
